<resources>
    <string name="app_name">Calculator</string>
    <string name="num_8">8</string>
    <string name="num_7">7</string>
    <string name="num_9">9</string>
    <string name="symbol_div">/</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="symbol_mul">*</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_percent">%</string>
    <string name="num_0">0</string>
    <string name="symbol_point">.</string>
    <string name="symbol_equally">=</string>
    <string name="symbol_plus">+</string>
    <string name="symbol_c">C</string>
    <string name="settings">Settings</string>
    <string name="other_theme_switch">Other theme</string>
    <string name="return_btn">Return</string>
    <string name="anything_theme">anything</string>
    <string name="papirus_theme">papirus</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
</resources>