<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:background="@drawable/papirus">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:gravity="center"
        android:background="@color/light_sand"/>

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCancel">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonLightTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDarkTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ShadowButtonsNumbers"
        android:text="@string/return_btn"
        />

</LinearLayout>